[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/UI/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/levels/background_menu.png" type="Texture" id=2]
[ext_resource path="res://scenes/levelSelector.gd" type="Script" id=3]
[ext_resource path="res://assets/levels/preview_levels/preview_level1.png" type="Texture" id=4]

[sub_resource type="Theme" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1672, -745 )
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 3840, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1110, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 693.952, 540.001 )
region_enabled = true
region_rect = Rect2( 0, 0, 2500, 1400 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 140.0
margin_top = -880.0
margin_right = 441.0
margin_bottom = -787.0
rect_scale = Vector2( 2.5, 2.5 )
theme = ExtResource( 1 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 301.0
margin_bottom = 13.0
theme = SubResource( 1 )
text = "Level 1"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 17.0
margin_right = 301.0
margin_bottom = 30.0
text = "Level 2"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 301.0
margin_bottom = 47.0
text = "Level 3"

[node name="Button4" type="Button" parent="."]
margin_left = 1173.0
margin_top = 800.0
margin_right = 1474.0
margin_bottom = 820.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
text = "Back"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 144.0
margin_top = -228.0
margin_right = 953.0
margin_bottom = 250.0
color = Color( 0.192157, 0.0509804, 0.580392, 0.454902 )

[node name="Preview" type="Sprite" parent="ColorRect"]
position = Vector2( 404, 241 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
